--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
           <div class="newsletter-header">
 
-            <h3 class="newsletter-title">Subscribe Newsletter.</h3>
+            <h3 class="newsletter-title">Subscribe .</h3>
 
             <p class="newsletter-desc">
-              Subscribe the <b>knon</b> to get latest products and discount updates.
+              Subscribe the <b>Anon</b> to get latest products and discount updates.
             </p>
 
           </div>
