--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </li>
 
                 <li class="panel-list-item">
-                  <a href="#">Laptop</a>
+                  <a href="#">Laptops</a>
                 </li>
 
                 <li class="panel-list-item">
